[gd_scene load_steps=9 format=3 uid="uid://qg7q3a1ubxp7"]

[ext_resource type="Script" path="res://niveles/libro.gd" id="1_o1qid"]
[ext_resource type="Texture2D" uid="uid://cwkostcg25hb0" path="res://assets-sistema/interfaz/fondo-capitulo-01.png" id="2_tlk3q"]
[ext_resource type="Texture2D" uid="uid://d2bdp16bgl7p8" path="res://assets-sistema/interfaz/cap-1.png" id="3_7d1hq"]
[ext_resource type="Texture2D" uid="uid://d12obyfp3sruy" path="res://assets-sistema/interfaz/cap-2.png" id="4_d0fp7"]
[ext_resource type="Texture2D" uid="uid://iavu3mbffpmt" path="res://assets-sistema/interfaz/cap-3.png" id="5_cr3ii"]
[ext_resource type="Texture2D" uid="uid://dlo1ym437o2kh" path="res://assets-sistema/interfaz/cap-4.png" id="6_5yxmo"]
[ext_resource type="Texture2D" uid="uid://cw2t3rhpxdndl" path="res://assets-sistema/interfaz/cap-5.png" id="7_ci3cu"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_b50jp"]
load_path = "res://.godot/imported/flecha-ir-para-atras-historias.png-83409338da2b5fe798fe8cc0bb323689.ctex"

[node name="Libro" type="Node2D"]
z_index = 4
script = ExtResource("1_o1qid")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 800.0
color = Color(0.623183, 0.999127, 0.762443, 1)

[node name="Sprite2D" type="Sprite2D" parent="ColorRect"]
position = Vector2(576, 400)
scale = Vector2(1.01691, 1.08165)
texture = ExtResource("2_tlk3q")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
texture_filter = 3
offset_left = 408.0
offset_top = 121.0
offset_right = 983.0
offset_bottom = 1038.0
scale = Vector2(0.632857, 0.632857)
theme_override_constants/separation = 20
alignment = 1

[node name="Cap1" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
icon = ExtResource("3_7d1hq")
flat = true

[node name="Cap2" type="Button" parent="VBoxContainer"]
layout_mode = 2
icon = ExtResource("4_d0fp7")
flat = true

[node name="Cap3" type="Button" parent="VBoxContainer"]
layout_mode = 2
icon = ExtResource("5_cr3ii")
flat = true

[node name="Cap4" type="Button" parent="VBoxContainer"]
layout_mode = 2
icon = ExtResource("6_5yxmo")
flat = true

[node name="Cap5" type="Button" parent="VBoxContainer"]
layout_mode = 2
icon = ExtResource("7_ci3cu")
flat = true

[node name="Atras" type="Button" parent="."]
offset_left = 27.0
offset_top = 590.0
offset_right = 252.0
offset_bottom = 858.0
scale = Vector2(0.698795, 0.626145)
icon = SubResource("CompressedTexture2D_b50jp")
flat = true

[connection signal="pressed" from="VBoxContainer/Cap1" to="." method="_on_cap_1_pressed"]
[connection signal="pressed" from="VBoxContainer/Cap2" to="." method="_on_cap_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Cap3" to="." method="_on_cap_3_pressed"]
[connection signal="pressed" from="VBoxContainer/Cap4" to="." method="_on_cap_4_pressed"]
[connection signal="pressed" from="VBoxContainer/Cap5" to="." method="_on_cap_5_pressed"]
[connection signal="pressed" from="Atras" to="." method="_on_button_pressed"]
